[package]
name = "smsp-example-dp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "smsp_example_dp"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.16.2"
pyo3 = { version = "0.16.3", features = ["extension-module"] }
